@@ -6,7 +6,13 @@
  totally. The file is provided AS IS and is probably completely unreadable.
 
 -----------------------------------------------------------------------------
+April 2 2005 Heikki Sairanen <heikki.sairanen@gmail.com>
 
+  * (some of these may refer to last commits)
+  * Holy handgranade
+  * gas grenades
+  * total weight of inventory to inventory
+	
 April 2 2005 Timo Kiviluoto <holybanana@users.sourceforge.net>
 
   * Mustard gas works somehow
